fix: navbar is not responsive in the simulator section

--- a/src/styles/css/main.stylesheet.css
+++ b/src/styles/css/main.stylesheet.css
@@ -650,7 +650,7 @@ div.icon img {
     /* height: 23.5px; */
     display: block;
     align-items: center;
-    z-index: 999;
+    z-index: 99;
     position: absolute;
     /* top: 47px; */
 }
